--- a/Public/home/law.html
+++ b/Public/home/law.html
@@ -32,12 +32,12 @@
             $('#bottom').append("<div class='col-lg-12'style='color: #ffffff;text-align: center;font-weight: 600;margin-top: 20px;margin-bottom: 20px;'>" +
             "Maison Capital&nbsp;&nbsp;&nbsp;&nbsp;Copy Right©&nbsp;&nbsp;|&nbsp;&nbsp;<a href='law.html' style='text-decoration: none;color: #fff'>Legal explanation</a></div>");
             $('#top').empty();
-            $('#top').append("<div style='text-align: right'><a href='index.html' id='index' style='text-decoration: none;color: #000'>Index</a>&nbsp;&nbsp;<a href='law.html' style='text-decoration: none; color: #000'>Chinese</a>&nbsp;|&nbsp;<a href='law.html?status=1' style='text-decoration: none; color: #000'>English</a>" +
-            "</div><ul style='list-style: none;'><li><a href='contact.html' style='text-decoration: none;' id='contact'>Contact Us</a></li>" +
-            "<li><a href='news.html' style='text-decoration: none;' id='news'>News</a></li>" +
-            "<li><a href='#' style='text-decoration: none;'>Investment case</a></li>" +
-            "<li><a href='team.html' style='text-decoration: none;' id='team'>Investment Team</a></li>" +
-            "<li><a href='abort.html' style='text-decoration: none;' id='abort'>About Us</a></li></ul>");
+            $('#top').append("<div style='text-align: right'><a href='index.html?status=1' id='index' style='text-decoration: none;color: #000'>Home</a>&nbsp;&nbsp;<a href='law.html' style='text-decoration: none; color: #000'>中文</a>&nbsp;|&nbsp;<a href='law.html?status=1' style='text-decoration: none; color: #000'>English</a>" +
+            "</div><ul style='list-style: none;'><li><a href='contact.html?status=1' style='text-decoration: none;' id='contact'>Contact Us</a></li>" +
+            "<li><a href='news.html?status=1' style='text-decoration: none;' id='news'>News</a></li>" +
+            "<li><a href='#' style='text-decoration: none;'>Investment Case</a></li>" +
+            "<li><a href='team.html?status=1' style='text-decoration: none;' id='team'>Investment Team</a></li>" +
+            "<li><a href='abort.html?status=1' style='text-decoration: none;' id='abort'>About Us</a></li></ul>");
         }
     })
 </script>
