--- a/Public/admin/index.html
+++ b/Public/admin/index.html
@@ -245,7 +245,8 @@
                     <div class="form-group" style="margin-top: 20px;">
                         <label for="title" class="col-sm-1 control-label">标语</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="title" name="title">
+                            <pre><textarea class=" form-control" id="title" style="height: 35px !important;">
+                        </textarea></pre>
                         </div>
                     </div>
                     <div class="form-group" style="margin-top: 20px;">
