--- a/Public/home/abort.html
+++ b/Public/home/abort.html
@@ -103,7 +103,7 @@
                 for (var i = 0; i < len; i++) {
                     $('#detail').append("<div class='col-lg-8 col-lg-offset-4' style='border-bottom:1px #BBB solid;margin-bottom: 20px;padding-bottom: 20px;'>" +
                     "<div class='col-lg-1'><img src='/Public/home/images/1.jpg'></div><div class='title'>" + r.msg.content[i][0] + "</div>" +
-                    "<div class='content col-lg-offset-1'><pre style='font-size: 14px;text-align: left !important; padding: 0'>" + r.msg.content[i][1] + "</pre></div></div>");
+                    "<div class='content col-lg-offset-1' style='margin-top: 10px;'><pre style='font-size: 14px;text-align: left !important; padding: 0'>" + r.msg.content[i][1] + "</pre></div></div>");
                 }
             }
         })
@@ -182,8 +182,8 @@
     </div>
 </div>
 <div style="margin-top: 10px;width: 100%;padding: 0">
-    <div style="width: 100%; padding: 0">
-        <img style="width: 100%;" src="/Public/home/images/banner4.jpg">
+    <div style="width: 100%; height: 400px; overflow: hidden; padding: 0">
+        <img style="width: 100%;margin-top: -350px;" src="/Public/home/images/banner4.jpg">
     </div>
 </div>
 <div class="container" style="margin-top: -50px;">
