--- a/Public/home/index.html
+++ b/Public/home/index.html
@@ -49,7 +49,8 @@
                 },
                 success:function(r){
                     var content='<pre>'+r.msg.content+'</pre>';
-                    $('#title').text(r.msg.title);
+                    var title='<pre>'+r.msg.title+'</pre>';
+                    $('#title').html(title);
                     $('#content').html(content);
                     $('#foot').text(r.msg.note);
                 }
@@ -60,7 +61,8 @@
                 "dataType":'json',
                 success:function(r){
                     var content='<pre>'+r.msg.content+'</pre>';
-                    $('#title').text(r.msg.title);
+                    var title='<pre>'+r.msg.title+'</pre>';
+                    $('#title').html(title);
                     $('#content').html(content);
                     $('#foot').text(r.msg.note);
                 }
@@ -99,14 +101,14 @@
     </ol>
     <!-- 轮播（Carousel）项目 -->
     <div class="carousel-inner">
-        <div class="item active">
-            <img src="/Public/home/images/banner1.jpg" style=" width:100%;" alt="First slide">
+        <div class="item active" style="height: 400px; overflow: hidden;">
+            <img src="/Public/home/images/banner1.jpg" style=" width:100%;margin-top: -130px;" alt="First slide">
         </div>
-        <div class="item">
-            <img src="/Public/home/images/banner4.jpg" style="width:100%;" alt="Second slide">
+        <div class="item" style="height: 400px; overflow: hidden;">
+            <img src="/Public/home/images/banner4.jpg" style="width:100%;margin-top: -350px;" alt="Second slide">
         </div>
-        <div class="item">
-            <img src="/Public/home/images/banner3.jpg" style="width:100%;font-family:arial" alt="Third slide">
+        <div class="item" style="height: 400px; overflow: hidden;">
+            <img src="/Public/home/images/banner3.jpg" style="width:100%;margin-top: -350px;" alt="Third slide">
         </div>
     </div>
 </div>
