--- a/Public/home/contact.html
+++ b/Public/home/contact.html
@@ -10,7 +10,7 @@
 <style>
     ul li {
         float: right;
-        margin-left: 20px;
+        margin-left: 30px;
         margin-top: 10px;
     }
 
@@ -86,7 +86,7 @@
                     $('#city_list').find('span').first().css('border-bottom','2px #9b761d solid');
                     $('#city_one').append("<div class='row'><div class='col-lg-4 col-lg-offset-1'><img style='width: 110%' src='../.." + r.msg[0].img + "'>" +
                     "</div>" +
-                    "<div class='col-lg-5 col-lg-offset-1 contact'><p class='company'>" + r.msg[0].company + "</p><p><span>电话：</span>" + r.msg[0].tel + "</p><p><span>传真：</span>" + r.msg[0].fax + "</p><p><span>邮箱：</span>" + r.msg[0].email + "</p><p><span>地址：</span>" + r.msg[0].add + "</p>" +
+                    "<div class='col-lg-5 contact' style='padding-left: 50px'><p class='company'>" + r.msg[0].company + "</p><p><span>电话：</span>" + r.msg[0].tel + "</p><p><span>传真：</span>" + r.msg[0].fax + "</p><p><span>邮箱：</span>" + r.msg[0].email + "</p><p><span>地址：</span>" + r.msg[0].add + "</p>" +
                     "</div>" +
                     "</div>");
                 }
@@ -101,16 +101,16 @@
                         $('#city_list').append("<span class='city_name' onclick='show(this)'>" + r.msg[i].city + "</span>");
                         $('#city').append("<div class='row detail'>" +
                         "<div class='hidden'>" + r.msg[i].city + "</div>" +
-                        "<div class='col-lg-4 col-lg-offset-1'><img style='width: 110%' src='../.." + r.msg[i].img + "'>" +
+                        "<div class='col-lg-5 col-lg-offset-1'><img style='width: 100%' src='../.." + r.msg[i].img + "'>" +
                         "</div>" +
-                        "<div class='col-lg-5 col-lg-offset-1 contact'><p class='company'>" + r.msg[i].company + "</p><p><span>电话：</span>" + r.msg[i].tel + "</p><p><span>传真：</span>" + r.msg[i].fax + "</p><p><span>邮箱：</span>" + r.msg[i].email + "</p><p><span>地址：</span>" + r.msg[i].add + "</p>" +
+                        "<div class='col-lg-5  contact' style='padding-left: 50px'><p class='company'>" + r.msg[i].company + "</p><p><span>电话：</span>" + r.msg[i].tel + "</p><p><span>传真：</span>" + r.msg[i].fax + "</p><p><span>邮箱：</span>" + r.msg[i].email + "</p><p><span>地址：</span>" + r.msg[i].add + "</p>" +
                         "</div>" +
                         "</div>");
                     }
                     $('#city_list').find('span').first().css('border-bottom','2px #9b761d solid');
-                    $('#city_one').append("<div class='row'><div class='col-lg-4 col-lg-offset-1'><img style='width: 110%' src='../.." + r.msg[0].img + "'>" +
+                    $('#city_one').append("<div class='row'><div class='col-lg-5 col-lg-offset-1'><img style='width: 100%' src='../.." + r.msg[0].img + "'>" +
                     "</div>" +
-                    "<div class='col-lg-5 col-lg-offset-1 contact'><p class='company'>" + r.msg[0].company + "</p><p><span>电话：</span>" + r.msg[0].tel + "</p><p><span>传真：</span>" + r.msg[0].fax + "</p><p><span>邮箱：</span>" + r.msg[0].email + "</p><p><span>地址：</span>" + r.msg[0].add + "</p>" +
+                    "<div class='col-lg-5  contact'style='padding-left: 50px'><p class='company'>" + r.msg[0].company + "</p><p><span>电话：</span>" + r.msg[0].tel + "</p><p><span>传真：</span>" + r.msg[0].fax + "</p><p><span>邮箱：</span>" + r.msg[0].email + "</p><p><span>地址：</span>" + r.msg[0].add + "</p>" +
                     "</div>" +
                     "</div>");
                 }
@@ -143,7 +143,7 @@
     .city_name {
         color: #000000 !important;
         display: block;
-        margin-left: 10px;
+        margin-left: 14%;
         float: left;
         font-size: 18px;
         font-family: "Microsoft YaHei"
@@ -161,15 +161,28 @@
     .contact p{
         font-family: "Microsoft YaHei";
     }
+
+    #log:hover{
+        cursor: pointer;
+    }
+
+    #city_list{
+        padding: 0;
+    }
+
+    #city_list span{
+        width: 28%;
+        text-align: center;
+    }
 </style>
 <body>
 <div class="container" style="margin-top: 10px;width: 100% !important;">
     <div class="row">
         <div class="col-lg-4">
-            <img style="padding-top: 5px;" src="/Public/home/images/logo.jpg">
+            <img id="log" onclick="window.location.href='index.html'" style="padding-top: 5px;" src="/Public/home/images/logo.jpg">
         </div>
         <div class="col-lg-6 col-lg-offset-2" id="top">
-            <div style="text-align: right"><a href="index.html">首页</a>&nbsp;&nbsp;<a href="contact.html">中文</a>&nbsp;|&nbsp;<a href="contact.html?status=1">English</a>
+            <div style="text-align: right"><a href="contact.html">中文</a>&nbsp;|&nbsp;<a href="contact.html?status=1">English</a>
             </div>
             <ul style="list-style: none;">
                 <li><a href="contact.html" style="text-decoration: none;" id="contact">联系我们</a></li>
@@ -182,7 +195,7 @@
     </div>
 </div>
 <div style="margin-top: 10px;width: 100%;padding: 0">
-    <div style="width: 100%; height: 400px; overflow: hidden;padding: 0">
+    <div style="width: 100%; height: 350px; overflow: hidden;padding: 0">
         <img style="width: 100%;margin-top: -350px;" src="/Public/home/images/banner3.jpg">
     </div>
 </div>
@@ -195,7 +208,7 @@
 </div>
 <div class="container" style="margin-top: 10px;">
     <div class="row">
-        <div class="col-lg-3 col-lg-offset-5" id="city_list"></div>
+        <div class="col-lg-2 col-lg-offset-5" id="city_list"></div>
     </div>
 </div>
 <div class="container" id="city" style="margin-top: 0px;">
