--- a/Public/home/index.html
+++ b/Public/home/index.html
@@ -10,7 +10,7 @@
 <style>
     ul li {
         float: right;
-        margin-left: 20px;
+        margin-left: 30px;
         margin-top: 10px;
     }
 
@@ -62,7 +62,7 @@
                     var title="<pre style='font-size: 36px; text-align: center; color:#525c75;font-weight: 600;font-family: 'Microsoft YaHei'>"+r.msg.title+"</pre>";
                     $('#title').html(title);
                     $('#content').html(content);
-                    $('#foot').text(r.msg.note);
+                    //$('#foot').text(r.msg.note);
                 }
             });
         }else{
@@ -74,7 +74,7 @@
                     var title="<pre style='font-size: 36px; text-align: center; color:#525c75;font-weight: 600;font-family: 'Microsoft YaHei'>"+r.msg.title+"</pre>";
                     $('#title').html(title);
                     $('#content').html(content);
-                    $('#foot').text(r.msg.note);
+                    //$('#foot').text(r.msg.note);
                 }
             });
         }
@@ -84,16 +84,19 @@
     ul li a{
         color: #4c4c4c;
     }
+    #log:hover{
+        cursor: pointer;
+    }
     pre{background-color: #ffffff;border: 0;font-size: 16px; text-align: center; font-family: 'Microsoft YaHei', sans-serif}
 </style>
 <body>
 <div class="container" style="margin-top: 10px;width: 100% !important;">
     <div class="row">
         <div class="col-lg-4">
-            <img style="padding-top: 5px;" src="/Public/home/images/logo.jpg">
+            <img id="log" onclick="window.location.href='index.html'" style="padding-top: 5px;" src="/Public/home/images/logo.jpg">
         </div>
         <div class="col-lg-6 col-lg-offset-2" id="top">
-            <div style="text-align: right"><a href="index.html" id="index">首页</a>&nbsp;&nbsp;<a href="index.html">中文</a>&nbsp;|&nbsp;<a href="index.html?status=1">English</a>
+            <div style="text-align: right"><a href="index.html">中文</a>&nbsp;|&nbsp;<a href="index.html?status=1">English</a>
             </div>
             <ul style="list-style: none;">
                 <li><a href="contact.html" style="text-decoration: none;" id="contact">联系我们</a></li>
@@ -114,13 +117,13 @@
     </ol>
     <!-- 轮播（Carousel）项目 -->
     <div class="carousel-inner">
-        <div class="item active" style="height: 400px; overflow: hidden;">
+        <div class="item active" style="height: 350px; overflow: hidden;">
             <img src="/Public/home/images/banner1.jpg" style=" width:100%;margin-top: -130px;" alt="First slide">
         </div>
-        <div class="item" style="height: 400px; overflow: hidden;">
+        <div class="item" style="height: 350px; overflow: hidden;">
             <img src="/Public/home/images/banner4.jpg" style="width:100%;margin-top: -350px;" alt="Second slide">
         </div>
-        <div class="item" style="height: 400px; overflow: hidden;">
+        <div class="item" style="height: 350px; overflow: hidden;">
             <img src="/Public/home/images/banner3.jpg" style="width:100%;margin-top: -350px;" alt="Third slide">
         </div>
     </div>
@@ -136,10 +139,10 @@
         <div class="col-lg-12" id="content">
 
         </div>
-        <div class="col-lg-12" id="foot"
+        <!--<div class="col-lg-12" id="foot"
              style="margin-top:50px;font-size: 18px; text-align: center; color:#525c75;font-family: 'Microsoft YaHei'">
 
-        </div>
+        </div>-->
     </div>
 </div>
 <div class="container" style="margin-top: 50px;width:100%;background-color: #525c75">
