--- a/Public/home/law.html
+++ b/Public/home/law.html
@@ -10,7 +10,7 @@
 <style>
     ul li {
         float: right;
-        margin-left: 20px;
+        margin-left: 30px;
         margin-top: 10px;
     }
 
@@ -56,14 +56,17 @@
         font-size: 12px;
         font-family: "Microsoft YaHei", sans-serif;
     }
+    #log:hover{
+        cursor: pointer;
+    }
 </style>
 <body>
 <div class="container" style="margin-top: 10px;width: 100% !important;">
         <div class="col-lg-4">
-            <img style="padding-top: 5px;" src="/Public/home/images/logo.jpg">
+            <img id="log" onclick="window.location.href='index.html'" style="padding-top: 5px;" src="/Public/home/images/logo.jpg">
         </div>
         <div class="col-lg-6 col-lg-offset-2" id="top">
-            <div style="text-align: right"><a href="index.html" id="index">首页</a>&nbsp;&nbsp;<a href="abort.html">中文</a>&nbsp;|&nbsp;<a href="abort.html?status=1">English</a>
+            <div style="text-align: right"><a href="abort.html">中文</a>&nbsp;|&nbsp;<a href="abort.html?status=1">English</a>
             </div>
             <ul style="list-style: none;">
                 <li><a href="contact.html" style="text-decoration: none;" id="contact">联系我们</a></li>
@@ -76,7 +79,7 @@
     </div>
 </div>
 <div style="margin-top: 10px;width: 100%;padding: 0">
-    <div style="width: 100%; height: 400px; overflow: hidden;padding: 0">
+    <div style="width: 100%; height: 350px; overflow: hidden;padding: 0">
         <img style="width: 100%;margin-top: -350px;" src="/Public/home/images/banner4.jpg">
     </div>
 </div>
