--- a/Public/home/news.html
+++ b/Public/home/news.html
@@ -10,7 +10,7 @@
 <style>
     ul li {
         float: right;
-        margin-left: 20px;
+        margin-left: 30px;
         margin-top: 10px;
     }
 
@@ -143,15 +143,18 @@
     #news_list{height: 1000px; overflow-y: hidden;}
     #show,#up:hover{cursor: pointer}
     .content{margin-top: -5px; font-family: "Microsoft YaHei"; font-size: 14px;}
+    #log:hover{
+        cursor: pointer;
+    }
 </style>
 <body>
 <div class="container" style="margin-top: 10px;width: 100% !important;">
     <div class="row">
         <div class="col-lg-4">
-            <img style="padding-top: 5px;" src="/Public/home/images/logo.jpg">
+            <img id="log" onclick="window.location.href='index.html'" style="padding-top: 5px;" src="/Public/home/images/logo.jpg">
         </div>
         <div class="col-lg-6 col-lg-offset-2" id="top">
-            <div style="text-align: right"><a href="index.html">首页</a>&nbsp;&nbsp;<a href="news.html">中文</a>&nbsp;|&nbsp;<a href="news.html?status=1">English</a>
+            <div style="text-align: right"><a href="news.html">中文</a>&nbsp;|&nbsp;<a href="news.html?status=1">English</a>
             </div>
             <ul style="list-style: none;">
                 <li><a href="contact.html" style="text-decoration: none;" id="contact">联系我们</a></li>
@@ -164,7 +167,7 @@
     </div>
 </div>
 <div style="margin-top: 10px;width: 100%;padding: 0">
-    <div style="width: 100%;height: 400px; overflow: hidden; padding: 0">
+    <div style="width: 100%;height: 350px; overflow: hidden; padding: 0">
         <img style="width: 100%;margin-top: -350px;" src="/Public/home/images/banner2.jpg">
     </div>
 </div>
